--- a/package.json
+++ b/package.json
@@ -1,85 +1,35 @@
 {
-  "name": "DarkMan",
-  "version": "1.0.0",
-  "description": "BrodCast By : DarkMan",
-  "main": "DarkMan.js",
-  "author": "DarkMan",
-  "license": "MIT",
-      "engines": {
-        "node": "10.x"
-      },
-  "dependencies": {
-    "anti-spam": "^0.2.7",
-    "http": "^0.0.0",
-    "node-cmd": "^3.0.0",
-    "express": "^4.17.1",
-    "array-sort": "^1.0.0",
-    "ascii-data-table": "^2.1.1",
-    "common-tags": "^1.8.0",
-    "math-expression-evaluator": "^1.2.17",
-    "canvas": "^2.6.1",
-    "fs-nextra": "^0.4.7",
-    "canvas-prebuilt": "^1.6.11",
-    "cleverbot.io": "^1.0.4",
-    "get": "1.4.0",
-    "hero": "^0.0.1",
-    "steam-search": "^1.0.0",
-    "hypixel-api": "1.1.0",
-    "name": "^0.0.2",
-    "3amyah": "^1.0.0",
-    "google-translate-api": "^2.3.0",
-    "dateformat": "^3.0.3",
-    "discord-anti-spam": "^2.1.1",
-    "discord.js": "^11.5.1",
-    "express": "^4.17.1",
-    "ffmpeg": "^0.0.4",
-    "better-sqlite-pool": "^0.2.2",
-    "guild": "^1.2.2",
-    "delay": "^4.3.0",
-    "enmap": "^5.2.3",
-    "ffmpeg-binaries": "^4.0.0",
-    "figlet": "^1.2.4",
-    "file-system": "^2.2.2",
-    "forever": "^1.0.0",
-    "fortnite": "^4.3.2",
-    "node-emoji": "^1.10.0",
-    "fortnite-api": "^3.4.0",
-    "get-youtube-id": "^1.0.1",
-    "gif-search": "^2.0.1",
-    "giphy-api": "^2.0.1",
-    "goo.gl": "^0.1.4",
-    "google-it": "^1.2.1",
-    "hastebin-gen": "^2.0.5",
-    "hh-mm-ss": "^1.2.0",
-    "jimp": "^0.9.1",
-    "message": "0.0.1",
-    "moment": "^2.24.0",
-    "ms": "^2.1.2",
-    "new": "0.1.1",
-    "node-opus": "^0.3.2",
-    "npm": "^6.13.4",
-    "opusscript": "^0.0.7",
-    "path": "0.12.7",
-    "pretty-ms": "^5.1.0",
-    "queue": "^6.0.1",
-    "lyric-get": "^1.0.3",
-    "get-artist-title": "^1.2.0",
-    "quick.db": "^6.3.2",
-    "replace": "^1.1.1",
-    "short-number": "^1.0.7",
-    "simple-youtube-api": "^5.2.1",
-    "sqlite": "^3.0.3",
-    "sqlite3": "^4.1.1",
-    "stackos": "1.1.0",
-    "superagent": "^5.1.2",
-    "table": "^5.4.6",
-    "until": "^0.1.1",
-    "ustat": "0.0.2",
-    "winston": "^3.2.1",
-    "youtube-info": "^1.3.2",
-    "ytdl-core": "^1.0.3"
-  },
-  "scripts": {
-    "start": "node DarkMan.js"
-  }
+    "name": "music",
+    "version": "1.0.0",
+    "description": "A Discord bot with DisTube and slash commands.",
+    "main": "src/index.js",
+    "scripts": {
+        "start": "node src/index.js"
+    },
+    "dependencies": {
+        "@discordjs/builders": "^1.8.2",
+        "@discordjs/opus": "^0.9.0",
+        "@discordjs/voice": "^0.17.0",
+        "@distube/soundcloud": "^2.0.3",
+        "axios": "^1.7.2",
+        "discord-music-player": "^9.1.1",
+        "discord-player": "^6.6.10",
+        "discord.js": "^14.15.3",
+        "dismusic": "^2.1.10",
+        "distube": "^5.0.1",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "ffmpeg": "^0.0.4",
+        "ffmpeg-static": "^5.2.0",
+        "fluent-ffmpeg": "^2.1.3",
+        "genius-lyrics": "^4.4.7",
+        "googleapis": "^140.0.1",
+        "isomorphic-unfetch": "^4.0.2",
+        "libsodium-wrappers": "^0.7.13",
+        "mongoose": "^8.5.3",
+        "ms": "^2.1.3",
+        "node-fetch": "^3.3.2",
+        "prism-media": "^1.3.5",
+        "request": "^2.88.2"
+    }
 }
